# start-timer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  clippy.yml  fmt.yml  release.yml  test.yml
src/: clock.rs  lib.rs  sound.rs
src/sound/: mod.rs  track.rs
