[package]
name = "start-timer"
version = "0.0.0"
edition = "2021"
description = "Utility to Start a Timer"
categories = ["command-line-utilities"]
homepage = "https://github.com/EstebanBorai/start-timer"
repository = "https://github.com/EstebanBorai/start-timer"
readme = "README.md"
keywords = ["timer", "utility", "notify"]
license = "MIT OR Apache-2.0"
authors = ["Esteban Borai <estebanborai@gmail.com>"]

[lib]
name = "start_timer"
path = "src/lib.rs"

[[bin]]
name = "start-timer"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4.5.2", features = ["std", "derive", "env"] }
humantime = "2.1.0"
